opam-version: "2.0"
maintainer: "Andreas Garnaes <andreas.garnaes@gmail.com>"
authors: "Andreas Garnaes <andreas.garnaes@gmail.com>"
homepage: "https://github.com/andreas/ocaml-fdb"
doc: "https://andreas.github.io/ocaml-fdb/"
bug-reports: "https://github.com/andreas/ocaml-fdb/issues"
dev-repo: "git+https://github.com/andreas/ocaml-fdb.git"

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build}
  "ctypes" {>= "0.14.0"}
  "ctypes-foreign" {>= "0.4.0"}
  "bigstringaf" {>= "0.5.0"}
  "angstrom" {>= "0.11.0"}
  "alcotest" {with-test}
  "lwt" {with-test}
]

synopsis: "Client bindings for FoundationDB"
