(library
  (public_name fdb.binding.types)
  (name stubs)
  (modules stubs)
  (libraries ctypes.stubs ctypes.foreign))

(executable
 (name stubgen)
 (modules stubgen)
 (libraries fdb.binding.types ctypes.stubs ctypes))

(rule (with-stdout-to "stub_types_gen.c" (run "./stubgen.exe")))

(rule
 (targets stub_types_gen.exe)
 (deps    (:stubs_ml_gen ./stub_types_gen.c))
 (action (bash "%{cc} %{stubs_ml_gen} \
  -I `dirname %{lib:ctypes:ctypes_cstubs_internals.h}` \
  -I %{ocaml_where} -o %{targets}")))

(rule (with-stdout-to "stub_types.ml" (run "./stub_types_gen.exe")))

(library
 (name fdb_types)
 (public_name fdb.types)
 (modules fdb_types stub_types)
 (libraries fdb.binding.types ctypes.stubs ctypes)
 (flags (:standard -w -9-27)))
